--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "cors": "^2.8.5",
+    "exec": "^0.2.1",
     "fs-extra": "^11.2.0",
+    "node-unrar-js": "^2.0.2",
+    "rimraf": "^5.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
