--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "exec": "^0.2.1",
     "fs-extra": "^11.2.0",
+    "multer": "^1.4.5-lts.1",
     "node-unrar-js": "^2.0.2",
     "rimraf": "^5.0.5",
     "rxjs": "~7.8.0",
