NL-009 remocion logica manejo wars, actualizacion login y crecion servidor back, coneccion consulta db transacciones wms_in y configuracion de rutas connections

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "dom"
     ],
     "allowJs": true, 
+    "resolveJsonModule": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
