--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "cors": "^2.8.5",
-    "exec": "^0.2.1",
-    "fs-extra": "^11.2.0",
-    "multer": "^1.4.5-lts.1",
-    "node-unrar-js": "^2.0.2",
-    "rimraf": "^5.0.5",
+    "mongoose": "*",
+    "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -36,7 +33,6 @@
     "@angular-devkit/build-angular": "^17.3.2",
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.0",
-    "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
