--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "cors": "^2.8.5",
     "mongoose": "*",
     "ngx-cookie-service": "^17.1.0",
